unpackaged/main/default/objects/Account/fields/example_v53__c.field-meta.xml
<CustomField>
    <fullName>example_v53__c</fullName>
    <description>An example v53 picklist for testing compare and deploy</description>
    <label>example_v53</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a</fullName>
                <default>true</default>
                <label>a</label>
            </value>
            <value>
                <fullName>hello</fullName>
            </value>
            <value>
                <fullName>in</fullName>
            </value>
            <value>
                <fullName>is</fullName>
            </value>
            <value>
                <fullName>new</fullName>
            </value>
            <value>
                <fullName>of</fullName>
            </value>
            <value>
                <fullName>picklist</fullName>
            </value>
            <value>
                <fullName>test</fullName>
            </value>
            <value>
                <fullName>the</fullName>
            </value>
            <value>
                <fullName>this</fullName>
            </value>
            <value>
                <fullName>v53</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>