unpackaged/main/default/objects/Account/fields/new_text_for_comparisons__c.field-meta.xml
<CustomField>
    <fullName>new_text_for_comparisons__c</fullName>
    <description>New text field for comparisons</description>
    <label>New text for comparisons</label>
    <length>100</length>
    <type>Text</type>
</CustomField>