unpackaged/main/default/objects/Account/fields/Pipelines_Example__c.field-meta.xml
<CustomField>
    <fullName>Pipelines_Example__c</fullName>
    <description>I'm making this as a test for pipelines, I want to try and get this into production through staging!</description>
    <label>Pipelines Example</label>
    <length>10</length>
    <type>Text</type>
</CustomField>