unpackaged/main/default/objects/Account/fields/v53_example_picklist__c.field-meta.xml
<CustomField>
    <fullName>v53_example_picklist__c</fullName>
    <description>Example v53 picklist for testing in compare and deploy.</description>
    <label>v53 example picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a</fullName>
                <default>true</default>
                <label>a</label>
            </value>
            <value>
                <fullName>is</fullName>
            </value>
            <value>
                <fullName>picklist</fullName>
            </value>
            <value>
                <fullName>test</fullName>
            </value>
            <value>
                <fullName>this</fullName>
            </value>
            <value>
                <fullName>to</fullName>
            </value>
            <value>
                <fullName>v53</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>