unpackaged/main/default/objects/Account/fields/XYZ_Picklist__c.field-meta.xml
<CustomField>
    <fullName>XYZ_Picklist__c</fullName>
    <label>XYZ Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hello</fullName>
            </value>
            <value>
                <fullName>World</fullName>
            </value>
            <value>
                <fullName>This</fullName>
            </value>
            <value>
                <fullName>Is</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Wow!</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>